# QuaKe

./: .gitignore  LICENSE  README.md  Storedata.py  cnn_scan.sh  features.npy  get_blob_imgs.ipynb  hist1.npy  hist2.npy  labels.npy  linear  optimize_c.ipynb  plotgen.ipynb  poly  rbf  requirements.txt  setup.cfg  setup.py  sig_vs_bkg_v0_9feb2022.ipynb  storedata.py
cards/: runcard.yaml
data/: bb_11771.npz  bb_11771.root.npz  bb_12006.npz  bb_12006.root.npz  bb_12227.npz  bb_12227.root.npz  bb_12603.npz  bb_12603.root.npz  bb_13111.npz  bb_13111.root.npz  bb_13247.npz  bb_13247.root.npz  bb_13659.npz  bb_13659.root.npz  bb_13746.npz  bb_13746.root.npz  bb_13926.npz  bb_13926.root.npz  bb_5481.npz  bb_5481.root.npz  e_15428.npz  e_15428.root.npz  e_15844.npz  e_15844.root.npz  e_17501.npz  e_17501.root.npz  e_18773.npz  e_18773.root.npz  e_23517.npz  e_23517.root.npz  e_25714.npz  e_25714.root.npz  e_26190.npz  e_26190.root.npz  e_4283.npz  e_4283.root.npz  e_5481.npz  e_5481.root.npz  e_8702.npz  e_8702.root.npz
docs/: README.md
examples/: README.md  accuracy2023_09_18 -16_21_02.txt  accuracy2023_09_18 -16_24_04.txt  accuracy2023_09_18 -16_27_40.txt  accuracy2023_09_18 -17_02_07.txt  accuracy2023_09_18 -17_04_30.txt  accuracy2023_09_18 -17_08_25.txt  accuracy2023_09_18 -17_15_28.txt  accuracy2023_09_18 -17_20_57.txt  accuracy2023_09_18 -17_30_46.txt  accuracy2023_09_18 -17_36_51.txt  accuracy2023_09_18 -17_41_16.txt  accuracy2023_09_18 -17_45_22.txt  accuracy2023_09_18 -23_38_52.txt  accuracy2023_09_18 -23_42_45.txt  accuracy2023_09_19 -00_08_30.txt  accuracy2023_09_19 -00_34_24.txt  accuracy2023_09_19 -12_24_12.txt  accuracy2023_09_19 -12_35_31.txt  accuracy2023_09_19 -13_04_56.txt  accuracy2023_09_19 -13_11_29.txt  accuracy2023_09_19 -17_36_06.txt  accuracy2023_09_19 -17_54_40.txt  accuracy2023_09_19 -17_56_04.txt  accuracy2023_09_19 -17_58_40.txt  accuracy2023_09_19 -23_38_25.txt  accuracy2023_09_19 -23_43_15.txt  accuracy2023_09_19 -23_45_21.txt  accuracy2023_09_20 -00_31_20.txt  accuracy2023_09_20 -00_40_24.txt  accuracy2023_09_20 -00_47_47.txt  accuracy2023_09_20 -00_53_22.txt  accuracy2023_09_20 -00_59_13.txt  accuracy2023_09_20 -01_04_27.txt  accuracy2023_09_20 -01_08_26.txt  accuracy2023_09_20 -01_16_00.txt  accuracy2023_09_20 -01_20_41.txt  accuracy2023_09_20 -01_53_27.txt  accuracy2023_09_20 -01_55_10.txt  accuracy2023_09_20 -11_25_43.txt  (+326 more)
examples/mnist/: mnist_attention.py
output/cards/: runcard.yaml
output/data/: bb_11771.root.npz  bb_12006.root.npz  bb_12227.root.npz  bb_12603.root.npz  bb_13111.root.npz  bb_13247.root.npz  bb_13659.root.npz  bb_13746.root.npz  bb_13926.root.npz  bb_5481.root.npz  e_15428.root.npz  e_15844.root.npz  e_17501.root.npz  e_18773.root.npz  e_23517.root.npz  e_25714.root.npz  e_26190.root.npz  e_4283.root.npz  e_5481.root.npz  e_645.root.npz  e_8702.root.npz
output/models/cnn/: cnn.h5  test_map.npy  train_map.npy  validation_map.npy
processed_dataset/: data_cv.npy  data_labels.npy
src/deeplar/: __init__.py
src/deeplar/dataset/: generate.py  generate_utils.py
src/deeplar/models/: AbstractNet.py  train.py  utils.py
src/deeplar/scripts/: deeplar.py
src/deeplar/utils/: callbacks.py  configlog.py  diagnostics.py  utils.py
src/quake/: __init__.py  configlog.py
src/quake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/quake/dataset/: generate.py  generate_utils.py
src/quake/models/: AbstractNet.py  train.py  utils.py
(+58 files in other folders)
