[metadata]
name = quake
version = 1.0.0
author = A. Giachero, M. Grossi, R. Moretti, M. Rossi
author_email = andrea.giachero@mib.infn.it, michele.grossi@cern.ch, r.moretti9@campus.unimib.it, marco.rossi@cern.ch
description = Quantum kernel classifier for neutrino physics applications
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/qismib/QuaKe.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    awkward
    numpy
    matplotlib
    pygad
    qiskit
    qiskit_machine_learning
    scipy
    sklearn
    pydot
    pyyaml
    qutip
    uproot

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quake = quake.scripts.quake:main

[options.extras_require]
tf = tensorflow
tf-gpu = tensorflow-gpu
tf-cpu = tensorflow-cpu
tf-amd = tensorflow-rocm
