[metadata]
name = deeplar
version = 1.0.0
author = A. Giachero, M. Grossi, R. Moretti, M. Rossi
author_email = andrea.giachero@mib.infn.it, michele.grossi@cern.ch, r.moretti9@campus.unimib.it, marco.rossi@cern.ch
description = Deep Learning classifier for low-energy events in Liquid Argon TPC
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/DeepLAr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    awkward
    numpy
    matplotlib
    networkx==2.8.8
    scipy
    sklearn
    pydot
    pyyaml
    uproot

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deeplar = deeplar.scripts.deeplar:main

[options.extras_require]
tf = tensorflow
tf-gpu = tensorflow-gpu
tf-cpu = tensorflow-cpu
tf-amd = tensorflow-rocm
